--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="img/tesla.jpg" class="img-fluid" alt="">
+            <img src="img/loho.jpg" class="img-fluid" alt="">
           </div>
           <p>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-            <h3 class="text-center">Awal berdirinya mobil Tesla. visi dn misi  </h3>
-            <p class="fst-italic">
-              Tesla Motors didirikan oleh dua insinyur otomotif, yaitu Martin Ebenhard dan Marc Tarpenning pada Juli 2003 di California, Amerika Serikat (AS). Kedua orang ini ingin membuktikan bahwa mobil listrik lebih baik, lebih cepat, dan lebih menyenangkan untuk dikendarai dibanding mobil berbahan bakar minyak. Selain Ebenhard dan Marc Tarpenning, Elon Musk merupakan pendiri sekaligus direktur utama dari Tesla Motors.
+            <h3 class="text-center bg-danger text-light">Awal berdirinya mobil Tesla  </h3>
+            <p class="fst-italic text-light">
+                     Tesla Motors didirikan oleh dua insinyur otomotif, yaitu Martin Ebenhard dan Marc Tarpenning pada Juli 2003 di California, Amerika Serikat (AS). Kedua orang ini ingin membuktikan bahwa mobil listrik lebih baik, lebih cepat, dan lebih menyenangkan untuk dikendarai dibanding mobil berbahan bakar minyak. Selain Ebenhard dan Marc Tarpenning, Elon Musk merupakan pendiri sekaligus direktur utama dari Tesla Motors.
               Nama Tesla sendiri diambil dari nama penemu, fisikawan, teknisi mekanika dan teknisi listrik asal Amerika Serikat, yaitu Nikola Tesla. Berkat penemuan tesla pada abad ke 19 dan awal abad 20, mobil listrik menjadi populer karena pada masa itu, mobil listrik lebih nyaman dan tingkat pengoperasiannya lebih mudah dibanding mobil BBM.
             </p>
-            <ul>
+            <ul class="text-light">
               <li><i class="ri-check-double-line"></i> Baterai Yang Lebih Tahan Lama.</li>
               <li><i class="ri-check-double-line"></i> AI (Artificial Intelligence) Tesla Dibuat Sangat Cerdas.</li>
               <li><i class="ri-check-double-line"></i> Branding yang Bagus.</li>
             </ul>
-            <p>
+            <p class="text-light">
               Karena keseriusan dalam menggarap mobil listrik tersebut pula, mobil Tesla diklaim sebagai mobil listrik terbaik di dunia dengan berbagai kecanggihan teknologi yang dimiliki.
             </p>
           </div>
@@ -59,8 +59,43 @@
 
       </div>
     </section>
-   
-   <!--gssg-->
+   <!--ahs-->
+   <section id="features" class="features">
+    <div class="container" data-aos="fade-up">
+
+      <div class="row">
+        <div class="image col-lg-6" style='background-image: url("type s/model\ s\ blck.jpeg");' data-aos="fade-right"></div>
+        <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
+          <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
+            <i class="bx bx-receipt"></i>
+            <h3 class="text-center text-light bg-danger">Spesifikasi Mobil Tesla</h3>
+            <h4 class="text-light">Sering Update sistem</h4>
+            <p class="text-light">Seperti halnya software komputer atau aplikasi di smartphone. Tesla membuat sebuah software yang selalu di-update secara berkala untuk menyesuaikan dengan teknologi kekinian.</p>
+          </div>
+          <div class="icon-box mt-5 text-light" data-aos="zoom-in" data-aos-delay="150">
+            <i class="bx bx-cube-alt"></i>
+            <h4>Desain yang kompleks tapi mewah</h4>
+            <p>Desain tesla yang sederhana tapi mewah yang membuat para milyader ingin mempunyai mobil tsb.</p>
+          </div>
+          <div class="icon-box mt-5 text-light" data-aos="zoom-in" data-aos-delay="150">
+            <i class="bx bx-images"></i>
+            <h4>Enak dilihat dari eangle manapun</h4>
+            <p>desain tesla yang minimalis membuat mobil ini enak dilihat dari sisi manapun.</p>
+          </div>
+          <div class="icon-box mt-5 text-light" data-aos="zoom-in" data-aos-delay="150">
+            <i class="bx bx-shield"></i>
+            <h4>Keamanan software yang terjamin</h4>
+            <p>Mobil tesla yang memiliki keamanan software tingkat tinggi, dan tidak ada 1 pun peretas yang bisa meretas sistem tesla.</p>
+          </div>
+        </div>
+        
+      </div>
+
+    </div>
+  </section>
+ 
+   <!--shh-->
+   <!--gssg--
    <section id="Tesla">
     <div class="container">
         <div class="row text-start">
@@ -100,32 +135,22 @@
             </div>
     </div>
 </section>
-  <!--nh-->
+  nh-->
   <section id="About me">
     <div class="container">
         <div class="row text-center mb-3">
             <div class="col">
-                <h2>Fitur Tesla</h2>
             </div>
         </div>
-        <div class="row  justify-content-center fs-5 text-center">
+        <div class="row  justify-content-center fs-5 text-center text-light">
+          <h2 class=" bg-danger text-light">Visi dan Misi</h2>
             <div class="col-4">
-                <p> 
-                  <ul>
-                    <li><a>Memiliki fitur sayap elang</a>
-                      <li><a>Punya fitur auto pilot</a>
-                        <li><a>memiliki fitur panggilan otomatis</a>
-                          </li>
-                        </li>
+              <h4>Misi</h4>
+                <p>mempercepat munculnya transportasi berkelanjutan dengan membawa mobil listrik pasar massal yang menarik ke pasar sesegera mungkin</p>
             </div>
             <div class="col-4">
-              <p> 
-                <ul>
-                  <li><a>tekologi filtrasi HEPA</a>
-                    <li><a>keunggulan dari segi keamanan</a>
-                      <li><a>Dibandrol hingga harga milyaran</a>
-                        </li>
-                      </li>
+              <h3>Visi</h3>
+              <p>"mengembangkan perusahaan mobil abad kedua puluh satu yang menarik dengan mendorong transisi dunia ke kendaraan listrik.</p>
             </div>
         </div>
     </div>
@@ -133,8 +158,7 @@
     
    <!--Akhir hero-->
    <!--team-->
-   <section id="Team" class="Menu">
-  </section>
+
    <!--Akhr-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   </body>
